--- a/pages/19046.html
+++ b/pages/19046.html
@@ -640,7 +640,7 @@ margin-left: 0em;
 </p>
 </div></div>
 
-<h4 id='topos_theory_2'><math class='maruku-mathml' display='inline' id='mathml_d12cc0ecd781207d35127c94270069235157c3ef_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Topos Theory</h4>
+<h4 id='topos_theory_2'><math class='maruku-mathml' display='inline' id='mathml_47847c3f769b568386145bb057293a6a314ebc74_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Topos Theory</h4>
 
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos+theory'>(∞,1)-topos theory</a></strong></p>
@@ -975,31 +975,51 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a><ul><li><a href='#remark'>Remark</a></li></ul></li><li><a href='#properties'>Properties</a></li><li><a href='#examples'>Examples</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a></li><li><a href='#remarks'>Remarks</a></li><li><a href='#properties'>Properties</a></li><li><a href='#examples'>Examples</a></li><li><a href='#ramifications'>Ramifications</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>An <strong>exponentiable topos</strong> is a generalization of the notion of an exponentiable <a class='existingWikiWord' href='/nlab/show/locale'>locale</a> and can be viewed as a (topological) “space” <math class='maruku-mathml' display='inline' id='mathml_d12cc0ecd781207d35127c94270069235157c3ef_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> that behaves well with respect to the construction of mapping spaces <math class='maruku-mathml' display='inline' id='mathml_d12cc0ecd781207d35127c94270069235157c3ef_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>Y</mi> <mi>X</mi></msup></mrow><annotation encoding='application/x-tex'>Y^X</annotation></semantics></math>.</p>
+<p>An <strong>exponentiable topos</strong> is a generalization of the notion of an exponentiable <a class='existingWikiWord' href='/nlab/show/locale'>locale</a> and can be viewed as a (topological) “space” <math class='maruku-mathml' display='inline' id='mathml_47847c3f769b568386145bb057293a6a314ebc74_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> that behaves well with respect to the construction of mapping spaces <math class='maruku-mathml' display='inline' id='mathml_47847c3f769b568386145bb057293a6a314ebc74_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>Y</mi> <mi>X</mi></msup></mrow><annotation encoding='application/x-tex'>Y^X</annotation></semantics></math>.</p>
 
 <h2 id='definition'>Definition</h2>
 
 <div class='num_defn'>
 <h6 id='definition_2'>Definition</h6>
 
-<p>A <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a> <math class='maruku-mathml' display='inline' id='mathml_d12cc0ecd781207d35127c94270069235157c3ef_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is called <em>exponentiable</em> (in the <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a> of Grothendieck toposes) if the 2-functor <math class='maruku-mathml' display='inline' id='mathml_d12cc0ecd781207d35127c94270069235157c3ef_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mrow></mrow> <mo lspace='verythinmathspace' rspace='0em'>−</mo></msub><mo>×</mo><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>{}_{-}\times\mathcal{E}</annotation></semantics></math> has a right 2-adjoint <math class='maruku-mathml' display='inline' id='mathml_d12cc0ecd781207d35127c94270069235157c3ef_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo stretchy='false'>(</mo> <mo lspace='verythinmathspace' rspace='0em'>−</mo></msub><msup><mo stretchy='false'>)</mo> <mi>ℰ</mi></msup></mrow><annotation encoding='application/x-tex'>(_{-})^\mathcal{E}</annotation></semantics></math>.</p>
+<p>A <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a> <math class='maruku-mathml' display='inline' id='mathml_47847c3f769b568386145bb057293a6a314ebc74_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is called <em>exponentiable</em> (in the <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a> of Grothendieck toposes <math class='maruku-mathml' display='inline' id='mathml_47847c3f769b568386145bb057293a6a314ebc74_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>GrTop</mi></mrow><annotation encoding='application/x-tex'>GrTop</annotation></semantics></math>) if the 2-functor <math class='maruku-mathml' display='inline' id='mathml_47847c3f769b568386145bb057293a6a314ebc74_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mrow></mrow> <mo lspace='verythinmathspace' rspace='0em'>−</mo></msub><mo>×</mo><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>{}_{-}\times\mathcal{E}</annotation></semantics></math> has a right 2-adjoint <math class='maruku-mathml' display='inline' id='mathml_47847c3f769b568386145bb057293a6a314ebc74_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo stretchy='false'>(</mo> <mo lspace='verythinmathspace' rspace='0em'>−</mo></msub><msup><mo stretchy='false'>)</mo> <mi>ℰ</mi></msup></mrow><annotation encoding='application/x-tex'>(_{-})^\mathcal{E}</annotation></semantics></math>.</p>
 </div>
 
-<h3 id='remark'>Remark</h3>
+<h2 id='remarks'>Remarks</h2>
 
+<ul>
+<li>
+<p>More concretely, <math class='maruku-mathml' display='inline' id='mathml_47847c3f769b568386145bb057293a6a314ebc74_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is exponentiable if there exists a functor <math class='maruku-mathml' display='inline' id='mathml_47847c3f769b568386145bb057293a6a314ebc74_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo stretchy='false'>(</mo> <mo lspace='verythinmathspace' rspace='0em'>−</mo></msub><msup><mo stretchy='false'>)</mo> <mi>ℰ</mi></msup></mrow><annotation encoding='application/x-tex'>(_{-})^\mathcal{E}</annotation></semantics></math> such that for all toposes <math class='maruku-mathml' display='inline' id='mathml_47847c3f769b568386145bb057293a6a314ebc74_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℱ</mi><mo>,</mo><mi>𝒢</mi></mrow><annotation encoding='application/x-tex'>\mathcal{F},\mathcal{G}</annotation></semantics></math> <math class='maruku-mathml' display='inline' id='mathml_47847c3f769b568386145bb057293a6a314ebc74_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Hom</mi><mo stretchy='false'>(</mo><mi>ℱ</mi><mo>×</mo><mi>ℰ</mi><mo>,</mo><mi>𝒢</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Hom(\mathcal{F}\times\mathcal{E},\mathcal{G})</annotation></semantics></math> is (naturally) equivalent as a category to <math class='maruku-mathml' display='inline' id='mathml_47847c3f769b568386145bb057293a6a314ebc74_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Hom</mi><mo stretchy='false'>(</mo><mi>ℱ</mi><mo>,</mo><msup><mi>𝒢</mi> <mi>ℰ</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Hom(\mathcal{F},\mathcal{G}^\mathcal{E})</annotation></semantics></math>.</p>
+</li>
+
+<li>
 <p>The concept generalizes to <a class='existingWikiWord' href='/nlab/show/higher+topos+theory'>higher topos theory</a> (cf. <a href='#AJ18'>Anel-Lejay 2018</a>, <a href='#Lurie18'>Lurie 2018</a>).</p>
+</li>
+</ul>
 
 <h2 id='properties'>Properties</h2>
 
-<p>The following theorem generalizes a result of <a class='existingWikiWord' href='/nlab/show/Martin+Hyland'>Martin Hyland</a> (<a href='#Hyland81'>1981</a>) on exponentiable locales to Grothendieck toposes.</p>
+<p>Interestingly, in the category of locales exponentiability of a locale <math class='maruku-mathml' display='inline' id='mathml_47847c3f769b568386145bb057293a6a314ebc74_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> hinges on the existence of the single exponential <math class='maruku-mathml' display='inline' id='mathml_47847c3f769b568386145bb057293a6a314ebc74_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>S</mi> <mi>X</mi></msup></mrow><annotation encoding='application/x-tex'>S^X</annotation></semantics></math> where <math class='maruku-mathml' display='inline' id='mathml_47847c3f769b568386145bb057293a6a314ebc74_15' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>S</mi></mrow><annotation encoding='application/x-tex'>S</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/Sierpinski+space'>Sierpinski space</a>: <math class='maruku-mathml' display='inline' id='mathml_47847c3f769b568386145bb057293a6a314ebc74_16' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>Y</mi> <mi>X</mi></msup></mrow><annotation encoding='application/x-tex'>Y^X</annotation></semantics></math> exists for all <math class='maruku-mathml' display='inline' id='mathml_47847c3f769b568386145bb057293a6a314ebc74_17' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Y</mi></mrow><annotation encoding='application/x-tex'>Y</annotation></semantics></math> iff <math class='maruku-mathml' display='inline' id='mathml_47847c3f769b568386145bb057293a6a314ebc74_18' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>S</mi> <mi>X</mi></msup></mrow><annotation encoding='application/x-tex'>S^X</annotation></semantics></math> exists.</p>
+
+<p>In <math class='maruku-mathml' display='inline' id='mathml_47847c3f769b568386145bb057293a6a314ebc74_19' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>GrTop</mi></mrow><annotation encoding='application/x-tex'>GrTop</annotation></semantics></math> the object classifier <math class='maruku-mathml' display='inline' id='mathml_47847c3f769b568386145bb057293a6a314ebc74_20' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒮</mi><mo stretchy='false'>[</mo><mi>𝕆</mi><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>\mathcal{S}[\mathbb{O}]</annotation></semantics></math> takes over the role of the Sierpinski space and we have the following</p>
+
+<div class='num_prop'>
+<h6 id='proposition'>Proposition</h6>
+
+<p>A <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a> <math class='maruku-mathml' display='inline' id='mathml_47847c3f769b568386145bb057293a6a314ebc74_21' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is exponentiable iff the exponential <math class='maruku-mathml' display='inline' id='mathml_47847c3f769b568386145bb057293a6a314ebc74_22' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒮</mi><mo stretchy='false'>[</mo><mi>𝕆</mi><msup><mo stretchy='false'>]</mo> <mi>ℰ</mi></msup></mrow><annotation encoding='application/x-tex'>\mathcal{S}[\mathbb{O}]^\mathcal{E}</annotation></semantics></math> exists.</p>
+</div>
+
+<p>This result is due to Johnstone-Joyal (<a href='#JJ82'>1982</a>, p.257) and occurs as theorem 4.3.1 of Johnstone (<a href='#J02'>2002, vol.1 p.433</a>).</p>
+
+<p>The following theorem pursues this analogy and generalizes a result of <a class='existingWikiWord' href='/nlab/show/Martin+Hyland'>Martin Hyland</a> on locales (<a href='#Hyland81'>1981</a>).</p>
 
 <div class='num_prop'>
 <h6 id='theorem'>Theorem</h6>
 
-<p>A <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a> <math class='maruku-mathml' display='inline' id='mathml_d12cc0ecd781207d35127c94270069235157c3ef_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is an exponentiable object in the 2-category of Grothendieck toposes and <a class='existingWikiWord' href='/nlab/show/geometric+morphism'>geometric morphisms</a> iff <math class='maruku-mathml' display='inline' id='mathml_d12cc0ecd781207d35127c94270069235157c3ef_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/continuous+category'>continuous category</a>.</p>
+<p>A <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a> <math class='maruku-mathml' display='inline' id='mathml_47847c3f769b568386145bb057293a6a314ebc74_23' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is an exponentiable object in the 2-category of Grothendieck toposes and <a class='existingWikiWord' href='/nlab/show/geometric+morphism'>geometric morphisms</a> iff <math class='maruku-mathml' display='inline' id='mathml_47847c3f769b568386145bb057293a6a314ebc74_24' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/continuous+category'>continuous category</a>.</p>
 </div>
 
 <p>This result is due to Johnstone-Joyal (<a href='#JJ82'>1982</a>) and occurs as theorem 4.4.5 of Johnstone (<a href='#J02'>2002, p.748</a>).</p>
@@ -1012,9 +1032,19 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>By the same reasoning all functor categories <math class='maruku-mathml' display='inline' id='mathml_d12cc0ecd781207d35127c94270069235157c3ef_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>Set</mi> <mi>𝒞</mi></msup></mrow><annotation encoding='application/x-tex'>Set^{\mathcal{C}}</annotation></semantics></math> for <math class='maruku-mathml' display='inline' id='mathml_d12cc0ecd781207d35127c94270069235157c3ef_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/small+category'>small category</a> are exponentiable since they are <a class='existingWikiWord' href='/nlab/show/locally+finitely+presentable+category'>locally finitely presentable</a>. This includes in particular all <a class='existingWikiWord' href='/nlab/show/category+of+presheaves'>presheaf toposes</a> on small categories.</p>
+<p>By the same reasoning all functor categories <math class='maruku-mathml' display='inline' id='mathml_47847c3f769b568386145bb057293a6a314ebc74_25' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>Set</mi> <mi>𝒞</mi></msup></mrow><annotation encoding='application/x-tex'>Set^{\mathcal{C}}</annotation></semantics></math> for <math class='maruku-mathml' display='inline' id='mathml_47847c3f769b568386145bb057293a6a314ebc74_26' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/small+category'>small category</a> are exponentiable since they are <a class='existingWikiWord' href='/nlab/show/locally+finitely+presentable+category'>locally finitely presentable</a>. This includes in particular all <a class='existingWikiWord' href='/nlab/show/category+of+presheaves'>presheaf toposes</a> on small categories.</p>
 </li>
 </ul>
+
+<h2 id='ramifications'>Ramifications</h2>
+
+<p>The notion of a <a class='existingWikiWord' href='/nlab/show/tiny+object'>tiny object</a> in a cartesian closed category suggests the following</p>
+
+<div class='num_defn'>
+<h6 id='definition_3'>Definition</h6>
+
+<p>An exponentiable Grothendieck topos <math class='maruku-mathml' display='inline' id='mathml_47847c3f769b568386145bb057293a6a314ebc74_27' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is called <em>tiny</em> (or <em>infinitesimal</em>) if the 2-functor <math class='maruku-mathml' display='inline' id='mathml_47847c3f769b568386145bb057293a6a314ebc74_28' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo stretchy='false'>(</mo> <mo lspace='verythinmathspace' rspace='0em'>−</mo></msub><msup><mo stretchy='false'>)</mo> <mi>ℰ</mi></msup></mrow><annotation encoding='application/x-tex'>(_{-})^\mathcal{E}</annotation></semantics></math> has a right 2-adjoint <math class='maruku-mathml' display='inline' id='mathml_47847c3f769b568386145bb057293a6a314ebc74_29' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo stretchy='false'>(</mo> <mo lspace='verythinmathspace' rspace='0em'>−</mo></msub><msub><mo stretchy='false'>)</mo> <mi>ℰ</mi></msub></mrow><annotation encoding='application/x-tex'>(_{-})_\mathcal{E}</annotation></semantics></math>.</p>
+</div>
 
 <h2 id='related_entries'>Related entries</h2>
 
@@ -1086,14 +1116,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March 13, 2018 18:34:42 
+  Revised on March 14, 2018 10:31:44 
   by <a class="existingWikiWord" href="/nlab/show/Thomas+Holder">Thomas Holder</a>
-  (89.204.130.20)
+  (89.204.130.34)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/exponentiable+topos" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/exponentiable+topos/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/exponentiable+topos" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/exponentiable+topos" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/exponentiable+topos" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/exponentiable+topos/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/exponentiable+topos" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/exponentiable+topos" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
