--- a/pages/19066.html
+++ b/pages/19066.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      model category theory - contents in nLab
+      Grothendieck construction for model categories in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      model category theory - contents
+      Grothendieck construction for model categories
   </h1>
 
 
@@ -308,7 +308,14 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p><strong><a class='existingWikiWord' href='/nlab/show/model+category'>model category</a></strong></p>
+    <div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
+
+<h4 id='model_category_theory'>Model category theory</h4>
+
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/model+category'>model category</a></strong></p>
 
 <h2 id='definitions'>Definitions</h2>
 
@@ -470,7 +477,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h2 id='presentation_of_categories'>Presentation of <math class='maruku-mathml' display='inline' id='mathml_ea5dbb0d59c894ec267d0a19ce458452d3a4d4bc_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</h2>
+<h2 id='presentation_of_categories'>Presentation of <math class='maruku-mathml' display='inline' id='mathml_e62889d704e14c8bb48049b2b3cd71011efddf39_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</h2>
 
 <ul>
 <li>
@@ -496,7 +503,7 @@ margin-left: 0em;
 <li><a class='existingWikiWord' href='/nlab/show/Cisinski+model+structure'>Cisinski model structure</a></li>
 </ul>
 
-<h3 id='for_groupoids'>for <math class='maruku-mathml' display='inline' id='mathml_ea5dbb0d59c894ec267d0a19ce458452d3a4d4bc_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groupoids</h3>
+<h3 id='for_groupoids'>for <math class='maruku-mathml' display='inline' id='mathml_e62889d704e14c8bb48049b2b3cd71011efddf39_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groupoids</h3>
 
 <p><a class='existingWikiWord' href='/nlab/show/model+structure+for+infinity-groupoids'>for ∞-groupoids</a></p>
 
@@ -548,7 +555,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_groupoids_2'>for <math class='maruku-mathml' display='inline' id='mathml_ea5dbb0d59c894ec267d0a19ce458452d3a4d4bc_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-groupoids</h3>
+<h3 id='for_groupoids_2'>for <math class='maruku-mathml' display='inline' id='mathml_e62889d704e14c8bb48049b2b3cd71011efddf39_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-groupoids</h3>
 
 <ul>
 <li>
@@ -560,7 +567,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_groups'>for <math class='maruku-mathml' display='inline' id='mathml_ea5dbb0d59c894ec267d0a19ce458452d3a4d4bc_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groups</h3>
+<h3 id='for_groups'>for <math class='maruku-mathml' display='inline' id='mathml_e62889d704e14c8bb48049b2b3cd71011efddf39_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groups</h3>
 
 <ul>
 <li>
@@ -572,7 +579,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_algebras'>for <math class='maruku-mathml' display='inline' id='mathml_ea5dbb0d59c894ec267d0a19ce458452d3a4d4bc_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-algebras</h3>
+<h3 id='for_algebras'>for <math class='maruku-mathml' display='inline' id='mathml_e62889d704e14c8bb48049b2b3cd71011efddf39_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-algebras</h3>
 
 <h4 id='general'>general</h4>
 
@@ -634,7 +641,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_categories'>for <math class='maruku-mathml' display='inline' id='mathml_ea5dbb0d59c894ec267d0a19ce458452d3a4d4bc_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</h3>
+<h3 id='for_categories'>for <math class='maruku-mathml' display='inline' id='mathml_e62889d704e14c8bb48049b2b3cd71011efddf39_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</h3>
 
 <ul>
 <li>
@@ -658,13 +665,13 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_stable_categories'>for stable <math class='maruku-mathml' display='inline' id='mathml_ea5dbb0d59c894ec267d0a19ce458452d3a4d4bc_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</h3>
+<h3 id='for_stable_categories'>for stable <math class='maruku-mathml' display='inline' id='mathml_e62889d704e14c8bb48049b2b3cd71011efddf39_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</h3>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/model+structure+on+dg-categories'>on dg-categories</a></li>
 </ul>
 
-<h3 id='for_operads'>for <math class='maruku-mathml' display='inline' id='mathml_ea5dbb0d59c894ec267d0a19ce458452d3a4d4bc_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-operads</h3>
+<h3 id='for_operads'>for <math class='maruku-mathml' display='inline' id='mathml_e62889d704e14c8bb48049b2b3cd71011efddf39_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-operads</h3>
 
 <ul>
 <li>
@@ -678,7 +685,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_categories_2'>for <math class='maruku-mathml' display='inline' id='mathml_ea5dbb0d59c894ec267d0a19ce458452d3a4d4bc_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>n</mi><mo>,</mo><mi>r</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(n,r)</annotation></semantics></math>-categories</h3>
+<h3 id='for_categories_2'>for <math class='maruku-mathml' display='inline' id='mathml_e62889d704e14c8bb48049b2b3cd71011efddf39_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>n</mi><mo>,</mo><mi>r</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(n,r)</annotation></semantics></math>-categories</h3>
 
 <ul>
 <li>
@@ -702,7 +709,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_sheaves__stacks'>for <math class='maruku-mathml' display='inline' id='mathml_ea5dbb0d59c894ec267d0a19ce458452d3a4d4bc_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-sheaves / <math class='maruku-mathml' display='inline' id='mathml_ea5dbb0d59c894ec267d0a19ce458452d3a4d4bc_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-stacks</h3>
+<h3 id='for_sheaves__stacks'>for <math class='maruku-mathml' display='inline' id='mathml_e62889d704e14c8bb48049b2b3cd71011efddf39_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-sheaves / <math class='maruku-mathml' display='inline' id='mathml_e62889d704e14c8bb48049b2b3cd71011efddf39_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-stacks</h3>
 
 <ul>
 <li>
@@ -731,26 +738,66 @@ margin-left: 0em;
 <p>
   <a href='/nlab/edit/model+category+theory+-+contents'>Edit this sidebar</a>
 </p>
+</div></div>
 </div>
 </div>
 
+<h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
+
+<p>The <a class='existingWikiWord' href='/nlab/show/Grothendieck+construction'>Grothendieck construction</a> may be lifted from <a class='existingWikiWord' href='/nlab/show/category'>categories</a> to <a class='existingWikiWord' href='/nlab/show/model+category'>model categories</a>, where is is (or should) serve as a presentation for the <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-Grothendieck+construction'>(infinity,1)-Grothendieck construction</a>.</p>
+
+<h2 id='references'>References</h2>
+
+<p>The first <a class='existingWikiWord' href='/nlab/show/model+category'>model category</a> version of the <a class='existingWikiWord' href='/nlab/show/Grothendieck+construction'>Grothendieck construction</a> was given in</p>
+
+<ul>
+<li id='Roig94'><a class='existingWikiWord' href='/nlab/show/Agust%C3%AD+Roig'>Agustí Roig</a>, <em>Model category structures in bifibred categories</em>, Journal of Pure and Applied Algebra 95.2, p.203–223, (1994) (<a href='https://doi.org/10.1016/0022-4049(94)90074-4'>doi:10.1016/0022-4049(94)90074-4</a>)</li>
+</ul>
+
+<p>This article (<a href='#Roig94'>Roig 94</a>) had a mistake, which was fixed in</p>
+
+<ul>
+<li id='Stanculesu12'>Alexandru E. Stanculescu, <em>Bifibrations and weak factorisation systems</em>, Applied Categorical Structures 20.1, p.19–30, (2012) (<a href='https://link.springer.com/article/10.1007/s10485-009-9214-3'>doi:10.1007/s10485-009-9214-3</a>)</li>
+</ul>
+
+<p>The construction was then generalized in</p>
+
+<ul>
+<li id='HarpazPrasma14'><a class='existingWikiWord' href='/nlab/show/Yonatan+Harpaz'>Yonatan Harpaz</a>, <a class='existingWikiWord' href='/nlab/show/Matan+Prasma'>Matan Prasma</a>, <em>The Grothendieck construction for model categories</em>, Advances in Mathematics, Volume 281, 20 August 2015, Pages 1306-1363 (<a href='https://arxiv.org/abs/1404.1852'>arXiv:1404.1852</a>)</li>
+</ul>
+
+<p>For the special case of pseudofunctors with values in <a class='existingWikiWord' href='/nlab/show/groupoid'>groupoids</a>, a <a class='existingWikiWord' href='/nlab/show/model+category'>model category</a> version of the Grothendieck construction was discussed in</p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Sharon+Hollander'>Sharon Hollander</a>, <em>A homotopy theory for stacks</em> (<a href='http://arxiv.org/abs/math.AT/0110247'>arXiv:math.AT/0110247</a>).</li>
+</ul>
+
+<p>
+</p>
+
+<p>
+</p>
+</div>
+
 <div class="revisedby">
-  Revised on March 17, 2018 07:35:29 
+  Created on March 17, 2018 07:32:32 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/model+category+theory+-+contents" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/model+category+theory+-+contents/59" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(59 revisions)</span> | <a href="/nlab/show/diff/model+category+theory+-+contents" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/model+category+theory+-+contents" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Grothendieck+construction+for+model+categories" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/model+category+theory+-+contents" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Grothendieck+construction+for+model+categories" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/model+category+theory+-+contents" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Grothendieck+construction+for+model+categories" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/model+category+theory+-+contents" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Grothendieck+construction+for+model+categories" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
